src/test/ui/fn/fn-closure-mutable-capture.stderr
error[E0594]: cannot assign to `x`, as it is a captured variable in a `Fn` closure
  --> $DIR/fn-closure-mutable-capture.rs:5:17
   |
LL |     bar(move || x = 1);
   |                 ^^^^^ cannot assign
   |
help: consider changing this to accept closures that implement `FnMut`
  --> $DIR/fn-closure-mutable-capture.rs:5:9
   |
LL |     bar(move || x = 1);
   |         ^^^^^^^^^^^^^

error: aborting due to previous error

